--- a/src/index.scss
+++ b/src/index.scss
@@ -2,12 +2,16 @@
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
+
+  a {
+    text-decoration: none;
+  }
 }
 
 .App {
   height: 100%;
 
-  .menuBackground {
+  .menu-background {
     display: none;
     width: 100%;
     height: 100%;
@@ -15,35 +19,102 @@
     background: #111518;
     font-size: 32px;
 
-    .menuIn {
-      padding: 307px 128px;
+    .menu-in {
+      padding: 307px 0 0 128px;
       color: white;
 
 
-      .menuInItem {
+      .menu-in__item {
         margin-bottom: 15px;
         cursor: pointer;
+        a {
+          color: white;
+          &:hover {
+            color: #0EC261;
+          }
+        }
       }
 
-      .menuInItem:hover {
-        color: #0EC261;
-      }
-
-      .socialNetworks {
+      .social-networks {
         margin-top: 38px;
         display: flex;
         justify-content: space-between;
         width: 144px;
 
-        .socialNetworksItem:hover {
-          color: #0EC261;
+        .social-networks__item {
+          svg {
+            cursor: pointer;
+            &:hover {
+              path {
+                fill: #0EC261;
+              }
+            }
+          }
         }
       }
     }
   }
 }
 
-.buttonBook {
+.burger-menu {
+  z-index: 9999;
+  cursor: pointer;
+  width: 24px;
+  height: 36px;
+  position: relative;
+
+  .burger-menu__line {
+    width: 100%;
+    height: 3px;
+    border-radius: 100px;
+    background: white;
+    position: absolute;
+    overflow: visible;
+    transition: 0.3s;
+  }
+
+  .burger-menu_first-line {
+    top: 0;
+
+    &.active {
+      transform: rotate(45deg);
+      transition: all 0.3s linear;
+      opacity: 0;
+
+    }
+  }
+
+  .burger-menu_second-line {
+    top: 8px;
+
+    &.active {
+      transform: rotate(45deg);
+
+
+    }
+  }
+
+  .burger-menu_third-line {
+    top: 8px;
+
+    &.active {
+      transform: rotate(-45deg);
+    }
+  }
+
+  .burger-menu_forth-line {
+    top: 16px;
+
+    &.active {
+      transform: rotate(45deg);
+      transition: all 0.3s linear;
+      opacity: 0;
+
+    }
+  }
+}
+
+.main-part-middle__button-book {
   padding: 15px 45px;
   font-size: 18px;
   outline: 0;
@@ -61,7 +132,7 @@
   justify-content: space-between;
 
 
-  .lineMenu {
+  .line-menu {
     box-sizing: border-box;
     padding: 30px 21px;
     width: 64px;
@@ -71,14 +142,14 @@
     flex-direction: column;
     justify-content: space-between;
 
-    .burgerMenu {
+    .burger-menu {
       z-index: 9999;
       cursor: pointer;
       width: 24px;
       height: 36px;
       position: relative;
 
-      .burgerMenuLine {
+      .burger-menu__line {
         width: 100%;
         height: 3px;
         border-radius: 8px;
@@ -88,8 +159,9 @@
         transition: 0.3s;
       }
 
-      .burgerMenu__firstLine {
+      .burger-menu_first-line {
         top: 0;
+
         &.active {
           transform: rotate(45deg);
           transition: all 0.3s linear;
@@ -98,7 +170,7 @@
         }
       }
 
-      .burgerMenu__secondLine {
+      .burger-menu_second-line {
         top: 8px;
 
         &.active {
@@ -108,7 +180,7 @@
         }
       }
 
-      .burgerMenu__thirdLine {
+      .burger-menu_third-line {
         top: 8px;
 
         &.active {
@@ -116,7 +188,7 @@
         }
       }
 
-      .burgerMenu__forthLine {
+      .burger-menu_forth-line {
         top: 16px;
 
         &.active {
@@ -128,58 +200,71 @@
       }
     }
 
-    .lineMenuLanguage {
+    .line-menu__language {
       font-size: 13px;
       color: #0EC261;
 
     }
   }
 
-  .mainPartFooter {
+  .main-part-footer {
     display: flex;
   }
 
-  .mainPart {
+  .main-part {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 32px 64px;
+    padding: 32px 63px 32px 59px;
 
-    .mainPartUp {
+    .burger-menu {
+      display: none;
+    }
+
+    .main-part-up {
       display: flex;
       justify-content: space-between;
 
-      .mainPartUp__Title {
-        font-size: 30px;
-        font-weight: 300;
-        color: #0EC261
-      }
-
-      .mainPartUp__Location {
+      .main-part-up__TL {
+        width: 100%;
         display: flex;
-        align-items: center;
+        justify-content: space-between;
 
-        img {
-          margin-right: 7px;
+        .main-part-up__title {
+          a {
+            font-size: 30px;
+            font-weight: 700;
+            color: #0EC261
+          }
+        }
+
+        .main-part-up__location {
+          display: flex;
+          align-items: center;
+
+          img {
+            margin-right: 7px;
+          }
         }
       }
+
     }
 
-    .mainPartMiddle {
+    .main-part-middle {
 
-      .mainPartMiddle__Title {
+      .main-part-middle__title {
         font-size: 70px;
         font-weight: 700;
       }
 
-      .mainPartMiddle__Subtitle {
+      .main-part-middle__subtitle {
         font-size: 70px;
         font-weight: 700;
         color: #0EC261
       }
 
-      .mainPartMiddle__Subtitle2 {
+      .main-part-middle__subtitle2 {
         font-size: 27px;
         font-weight: 300;
         color: #999;
@@ -188,25 +273,24 @@
       }
     }
 
-    .mainPartFooter {
+    .main-part-footer {
       display: flex;
       justify-content: space-between;
       font-size: 13px;
       font-weight: 300;
       color: #999;
 
-      .mainPartPhone {
+      .main-part-footer__phone {
         color: #000;
 
         a {
-          text-decoration: none;
           color: black;
         }
       }
     }
   }
 
-  .sliderPart {
+  .slider-part {
     .fone {
 
       position: fixed;
@@ -223,7 +307,7 @@
     .slider {
       position: relative;
       height: 100vh;
-      width: 688px;
+      max-width: 688px;
       margin: 0 auto;
       overflow: hidden;
 
@@ -247,57 +331,60 @@
       .slide {
         height: 100%;
         width: 688px;
-        background-size: cover;
+        background-size: auto 100%;
+        background-repeat: no-repeat;
+        //background-image: url("/img/slide-1.png") 100% 100% no-repeat;
         background-repeat: no-repeat;
         background-position: center;
         color: white;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
 
-
-        .slide__title {
-          font-size: 40px;
-          margin-top: 295px;
-          margin-left: 96px;
-          margin-bottom: 15px;
-        }
-
-        .slide__subtitle {
+        .slide__content {
           margin-left: 96px;
 
-          max-width: 495px;
-          font-size: 24px;
+
+          .slide__title {
+            font-size: 40px;
+            margin-bottom: 15px;
+          }
+
+          .slide__subtitle {
+
+            max-width: 495px;
+            font-size: 24px;
 
 
-          font-style: normal;
-          font-weight: 300;
-          line-height: 90%;
+            font-style: normal;
+            font-weight: 300;
+            line-height: 90%;
 
 
+          }
+
+          .slide__button {
+            background: linear-gradient(90deg, #13493F 0%, #0C7B1B 100%);
+            border-radius: 4px;
 
 
-        }
-
-        .slide__button {
-          margin-left: 96px;
-          background: linear-gradient(90deg, #13493F 0%, #0C7B1B 100%);
-          border-radius: 4px;
-
-
-          margin-top: 32px;
-          font-style: normal;
-          font-weight: 500;
-          font-size: 18px;
-          line-height: 21px;
-          display: flex;
-          align-items: center;
-          padding: 15px 37px;
-          text-align: center;
-          border: 0;
-          outline: 0;
-          cursor: pointer;
-          /* Gray_light */
-          color: #EEEEEE;
+            margin-top: 32px;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 21px;
+            display: flex;
+            align-items: center;
+            padding: 15px 37px;
+            text-align: center;
+            border: 0;
+            outline: 0;
+            cursor: pointer;
+            /* Gray_light */
+            color: #EEEEEE;
 
 
+          }
         }
       }
 
@@ -361,4 +448,349 @@
 }
 
 
+@media screen and (max-width: 1440px) {
+  .container {
+    .main-part {
+      padding: 32px;
+    }
 
+    .slider-part {
+      .slider {
+        max-width: 600px;
+
+
+        .slide {
+          width: 600px;
+          height: 100%;
+
+          .slide__content {
+
+            .slide__subtitle {
+              max-width: 400px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1285px) {
+  .container {
+    .slider-part {
+      .slider {
+        max-width: 500px;
+
+        .slide {
+          width: 500px;
+
+          .slide__content {
+            .slide__subtitle {
+              max-width: 350px;
+            }
+          }
+        }
+
+
+        .arrowLine {
+          width: 40px;
+
+        }
+
+
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .container {
+    .main-part {
+      .main-part-middle {
+        .main-part-middle__subtitle2 {
+          font-size: 26px;
+        }
+      }
+    }
+
+    .slider-part {
+      .slider {
+        max-width: 410px;
+
+        .slide {
+          width: 410px;
+
+          .slide__content {
+            margin-left: 64px;
+
+            .slide__subtitle {
+              max-width: 282px;
+            }
+          }
+        }
+
+
+        .arrowLine {
+          width: 32px;
+
+        }
+
+
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1018px) {
+  .App {
+    .menu-background {
+      .menu-in {
+        padding-top: 150px;
+      }
+    }
+  }
+  .container {
+    .main-part {
+      padding: 32px 20px;
+
+      .main-part-middle {
+        .main-part-middle__subtitle2 {
+          font-size: 24px;
+        }
+      }
+    }
+
+    .slider-part {
+      .slider {
+        max-width: 370px;
+
+        .slide {
+          width: 370px;
+
+          .slide__content {
+            margin-left: 41px;
+
+            .slide__subtitle {
+              max-width: 250px;
+              font-size: 22px;
+            }
+          }
+        }
+
+
+        .arrowLine {
+          width: 32px;
+
+        }
+
+
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 945px) {
+  .container {
+    .main-part {
+      .main-part-middle {
+        .main-part-middle__subtitle2 {
+          font-size: 26px;
+        }
+      }
+    }
+
+    .slider-part {
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .container {
+    .main-part {
+      .main-part-middle {
+        .main-part-middle__title {
+          font-size: 60px;
+        }
+        .main-part-middle__subtitle {
+          font-size: 60px;
+        }
+
+        .main-part-middle__subtitle2 {
+          font-size: 24px;
+        }
+      }
+    }
+
+    .slider-part {
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width: 545px) {
+  .App {
+    .menu-background {
+
+      .menu-in {
+        padding: 90px 0 0 100px;
+      }
+    }
+  }
+
+  .container {
+    .main-part {
+      .main-part-middle {
+        .main-part-middle__title {
+          font-size: 50px;
+        }
+        .main-part-middle__subtitle {
+          font-size: 50px;
+        }
+
+        .main-part-middle__subtitle2 {
+          font-size: 20px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 440px) {
+  .App {
+    .menu-background {
+      .menu-in {
+        padding: 80px 0 38px 28px;
+        color: white;
+
+        .menu-in__item {
+          font-size: 22px;
+        }
+      }
+    }
+  }
+
+  .container {
+    height: 100vh;
+    .line-menu {
+      display: none;
+    }
+    .main-part {
+      padding: 0;
+
+      .main-part-up {
+        padding: 16px;
+
+        .main-part-up__TL {
+          width: 205px;
+          flex-direction: column;
+        }
+
+        .main-part-up__location {
+          margin-left: auto;
+        }
+
+        .main-part-up__title {
+          margin-left: auto;
+          margin-bottom: 8px;
+        }
+      }
+
+      .burger-menu {
+        display: block;
+        margin: 5px 0 0 3px;
+
+        .burger-menu__line {
+          background: black;
+          height: 3.5px;
+
+            &.active {
+              background: #FFF;
+
+            }
+          }
+      }
+      .main-part-middle {
+        flex-grow: 0.4;
+
+        .main-part-middle__title {
+          padding: 0 16px;
+          font-size: 50px;
+        }
+        .main-part-middle__subtitle {
+          padding: 0 16px;
+          font-size: 50px;
+        }
+
+        .main-part-middle__subtitle2 {
+          margin-top: 16px;
+          margin-bottom: 32px;
+          font-size: 20px;
+          padding: 0 16px;
+        }
+
+        .main-part-middle__button-book {
+          width: 100%;
+          border-radius: 0;
+        }
+      }
+      .main-part-footer {
+        flex-direction: column;
+        padding: 16px;
+        background: #151B1F;
+        color: white;
+
+        .main-part-footer__year {
+          margin-left: auto;
+          order: 1;
+        }
+
+        .main-part-footer__phone {
+          margin-left: auto;
+          margin-bottom: 8px;
+          order: 0;
+
+          a {
+            color: #0EC261;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 368px) {
+  .container {
+    .main-part {
+      .main-part-middle {
+        .main-part-middle__title {
+          font-size: 32px;
+        }
+
+        .main-part-middle__subtitle {
+          font-size: 32px;
+        }
+
+        .main-part-middle__subtitle2 {
+          font-size: 18px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 275px) {
+  .container {
+    .main-part {
+      .main-part-up {
+        .main-part-up__TL {
+          .main-part-up__title {
+            a {
+              font-size: 24px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
