--- a/src/pages/Order/index.scss
+++ b/src/pages/Order/index.scss
@@ -47,7 +47,7 @@ body, html {
   }
 
   .order-page-content__header {
-    margin: 32px auto;
+    margin: 21px auto;
     max-width: 1245px;
     display: flex;
     justify-content: space-between;
@@ -83,7 +83,7 @@ body, html {
             outline: none;
             font-size: 14px;
             margin-left: 5px;
-            width: 224px;
+            width: 220px;
           }
         }
       }
@@ -114,21 +114,29 @@ body, html {
         .order-info__properties {
           ul {
             li {
+              color: #999;
+              position: relative;
               display: flex;
               max-width: 287px;
               margin-bottom: 16px;
 
+              .order-info-address__city {
+                position: absolute;
+                top: -14px;
+                right: 0;
+              }
+
               span {
-                max-width: 101px;
+                max-width: 103px;
 
                 &.order-info-from-user {
-                  color: #999;
                   line-height: 16px;
                   text-align: end;
                 }
 
                 &.order-info-address {
-                  margin-top: -13px;
+                  position: relative;
+
                 }
 
               }
@@ -143,7 +151,7 @@ body, html {
 
               }
 
-              div {
+              .dots {
                 flex: 1;
                 border-bottom: 1px dotted #999;
                 height: 1em;
@@ -200,7 +208,7 @@ body, html {
   }
 }
 
-@media screen and (max-width: 1355px) {
+@media screen and (max-width: 1367px) {
   .main-container {
     .order-page-container {
       .order-page-main {
@@ -604,7 +612,7 @@ body, html {
               box-sizing: border-box;
 
               .order-form {
-                max-width: 250px;
+                max-width: 260px;
                 margin-bottom: 25px;
 
                 label {
@@ -612,6 +620,11 @@ body, html {
                 }
                 input {
                   max-width: 150px;
+                  box-sizing: border-box;
+
+                  &::-webkit-input-placeholder {
+                    font-size: 12px;
+                  }
                 }
               }
             }
